Fixed the alignment between images and their text on Artist Profile

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 html,
 body,
-table {
+.all-birthdays-table {
   scroll-behavior: smooth;
 }
 
@@ -71,11 +71,11 @@ th td span {
 }
 /*Icons*/
 
-.table-responsive {
+..all-birthdays-table-responsive {
   overflow-x: unset !important;
 }
 
-/* Table starts */
+/* .all-birthdays-table starts */
 
 td {
   border: 0 !important;
@@ -88,11 +88,11 @@ td {
   object-fit: cover;
 }
 
-table tr {
+.all-birthdays-table tr {
   cursor: pointer;
 }
 
-table tr:hover {
+.all-birthdays-table tr:hover {
   background-color: #0f5ca9;
 }
 
@@ -201,7 +201,7 @@ select option {
   column-count: 2;
 }
 
-table img {
+.all-birthdays-table img {
   border-radius: 100%;
   height: 160px;
   width: 160px;
@@ -335,7 +335,7 @@ hr {
   cursor: pointer;
 }
 
-/*table css ends*/
+/*.all-birthdays-table css ends*/
 
 /* pagination START*/
 
@@ -436,7 +436,6 @@ label span {
 }
 
 .main-content {
-  padding-bottom: 1%;
   overflow: auto !important;
 }
 
@@ -540,41 +539,41 @@ label span {
 }
 
 @media only screen and (max-width: 450px) {
-  table td,
-  table th {
+  .all-birthdays-table td,
+  .all-birthdays-table th {
     font-size: 0.8em;
   }
 }
 
 @media only screen and (max-width: 485px) {
-  table td,
-  table th {
+  .all-birthdays-table td,
+  .all-birthdays-table th {
     font-size: 0.75em;
   }
 }
 
 @media only screen and (max-width: 400px) {
-  table td,
-  table th {
+  .all-birthdays-table td,
+  .all-birthdays-table th {
     font-size: 0.7em;
   }
 }
 
 @media only screen and (max-width: 350px) {
-  table td,
-  table th {
+  .all-birthdays-table td,
+  .all-birthdays-table th {
     font-size: 0.65em;
   }
 }
 
 @media only screen and (max-width: 330px) {
-  table th {
+  .all-birthdays-table th {
     font-size: 0.5em;
   }
 }
 
 @media only screen and (max-width: 520px) {
-  table img {
+  .all-birthdays-table img {
     width: 50px !important;
     height: 50px !important;
     max-width: unset !important;
@@ -582,8 +581,20 @@ label span {
 }
 
 @media only screen and (max-width: 400px) {
-  table img {
+  .all-birthdays-table img {
     max-width: 100%;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .genres-div {
+    width: 240px !important;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .span-artist-profile {
+    font-size: medium !important;
   }
 }
 
